--- a/.github/workflows/cart.yml
+++ b/.github/workflows/cart.yml
@@ -31,7 +31,7 @@ jobs:
           docker build -t cart .
 
       - name: Docker Login (use secrets)
-        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+        run: docker login sharnithacr.azurecr.io -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Docker Push
         run: |
