--- a/.github/workflows/cart.yml
+++ b/.github/workflows/cart.yml
@@ -35,5 +35,5 @@ jobs:
 
       - name: Docker Push
         run: |
-          docker tag robot-shop:latest sharnithacr/robot-shop:${{ github.run_id }}
+          docker tag cart sharnithacr/robot-shop:${{ github.run_id }}
           docker push sharnithacr/robot-shop:${{ github.run_id }}
