--- a/.github/workflows/cart.yml
+++ b/.github/workflows/cart.yml
@@ -31,7 +31,7 @@ jobs:
           docker build -t sharnithacr/robot-shop:${{ github.run_id }} .
 
       - name: Docker Login
-        run: docker login sharnithacr.azurecr.io -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+        run: echo "${{ secrets.ACR_PASSWORD }}" | docker login sharnithacr.azurecr.io -u ${{ secrets.ACR_USERNAME }} --password-stdin
 
       - name: Docker Push
         run: |
